--- a/client/src/components/Ranking/Ranking.module.css
+++ b/client/src/components/Ranking/Ranking.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  position: relative;
 }
 .card_container {
   margin: 1em;
@@ -77,6 +78,13 @@
   right: .7em;
   font-size: 2.4em;
   margin: 0 0 0 0;
+}
+
+.loader_container  {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
