--- a/client/src/components/Favorites/Favorites.module.css
+++ b/client/src/components/Favorites/Favorites.module.css
@@ -4,6 +4,10 @@
   flex-direction: column;
   min-height: 100vh;
   max-width: 100vw;
+  background-image: url("../../assets/img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
 }
 
 .container > h2 {
