--- a/client/src/components/Home/Contents/Contents.module.css
+++ b/client/src/components/Home/Contents/Contents.module.css
@@ -4,16 +4,21 @@
   align-items: center;
   justify-content: center;
   max-width: 100vw;
-  margin: 4em .5em .5em .5em;
-  min-height: calc(100vh - 3.5em - 2.5em - 2.5em);
+  margin: 0;
+  padding-top: 4em;
+  min-height: 100vh;
   font-size: 12px;
   position: relative;
+  background-image: url("../../../assets/img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
 }
 
 .btn__new_deck {
   z-index: 3;
   position: absolute;
-  top: 0;
+  top: 4em;
   left: 0;
   background-color: var(--color1);
   padding: 0 1em 0 1em;
