--- a/client/src/components/Home/Contents/Filters/Filters.module.css
+++ b/client/src/components/Home/Contents/Filters/Filters.module.css
@@ -1,26 +1,22 @@
 .container {
-  /* width: 0; */
   width: 12em;
   height: 0;
   position: absolute;
   pointer-events: none;
   opacity: 0;
   overflow: hidden;
-  top: 2.5em;
+  top: 6.5em;
   right: 0;
-  z-index: 1;
+  z-index: 3;
   color: #fff;
   background-color: var(--color1);
   font-family: 'Concert One';
-  font-size: 12px;
-  /* display: none; */
+  font-size: 15px;
   transition: height .5s ease, background-color .5s ease, opacity .5s ease;
-
 }
 .open_container {
-
   height: calc(100vh - 3.5em - 2.5em - 3em);
-   background-color: var(--color1);
+  background-color: var(--color1);
   pointer-events: all;
   opacity: 1;
 }
@@ -105,14 +101,17 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 575px) {
+  .container {
+    display: none;
+  }
+}
 /*small sm*/
 @media screen and (min-width: 576px) and (max-width: 767px) {
-  .container {
-    font-size: 14px;
-  }
+
   .filters__actives .filter__active span {
     max-width: 9em;
-    font-size: .8rem;
+    font-size: 1rem;
   }
 }
 /*medium md*/
