--- a/client/src/components/Ranking/Ranking.module.css
+++ b/client/src/components/Ranking/Ranking.module.css
@@ -8,6 +8,10 @@
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
+  background-image: url("../../assets/img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
 }
 .card_container {
   margin: 1em;
