--- a/client/src/components/common/Header/Header.module.css
+++ b/client/src/components/common/Header/Header.module.css
@@ -16,7 +16,9 @@
 .current_page {
   border-bottom: 2px solid #fff;
 }
-
+.current_page:hover {
+  border-bottom: 2px solid var(--color4);
+}
 .logo{
   margin: 0;
   padding: 0;
@@ -79,7 +81,8 @@
 }
 
 .btn_log:hover {
-  opacity: .8;
+  background-color: var(--color3);
+  color: #fff !important;
 }
 
 .container > form{
@@ -113,7 +116,7 @@
   z-index: -1;
   border: 10px solid transparent;
   border-bottom-color: var(--color2);
-  margin: -.8em .5em; 
+  margin: -.8em .5em;
 }
 .container > form:after{
   position: absolute;
@@ -144,7 +147,7 @@
   height: calc(100% - 6px);
   margin: 3px;
   padding: 0 1em;
-  color: #fff;
+  color: var(--color4);
   background: var(--color1);
   border: none;
   border-radius: 2px;
