fixed yellow opacity

--- a/client/src/style/bg-types.css
+++ b/client/src/style/bg-types.css
@@ -46,7 +46,7 @@
 
 }
 .electric {
-  background: radial-gradient(circle, rgba(255, 225, 0, 0.835) 26%,  rgb(255, 166, 0)   100%);
+  background: radial-gradient(circle, rgba(255, 225, 0) 26%,  rgb(255, 166, 0)   100%);
 
 }
 .psychic { 
