--- a/client/src/components/Details/Details.module.css
+++ b/client/src/components/Details/Details.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items:center;
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 3em);
   background: var(--color3);
   /* background: linear-gradient(180deg, var(--color1) 0%, var(--color3) 35%, var(--color3) 65%, var(--color1) 100%); */
   font-size: 14px;
@@ -81,17 +81,16 @@
 
 .details {
   position: relative;
-  margin-top: 6em;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   border: 9px solid white;
   border-radius: 9px;
-  margin: 7em 2em;
+  margin: 6em 0 .5em 0;
   max-width: 60em;
 }
 .item__1 {
-  padding: 1em;
+  /* padding: 1em; */
   display: flex;
   flex-direction: column;
   align-items: center;
